intel/bench_214_new/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main/log.txt
bench_214_new/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main.c:20:16: error: use of undeclared identifier 'NULL'
    if (cur == NULL)
               ^
1 error generated.
HLS FPGA Parse FAILED.
